--- a/ViewSample/app/src/main/res/layout/activity_main.xml
+++ b/ViewSample/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,5 @@
         android:layout_marginTop="5dp"
         android:background="#ffffff"
         android:text="@string/tv_msg"
-        android:textSize="25sp"
+        android:textSize="25sp"/>
 </LinearLayout>
