--- a/ViewSample/app/src/main/res/layout/activity_main.xml
+++ b/ViewSample/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,10 @@
         android:layout_marginTop="5dp"
         android:background="#ffffff"
         android:inputType="text"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 </LinearLayout>
