feat: test setting button by design mode

--- a/ViewSample/app/src/main/res/layout/activity_main.xml
+++ b/ViewSample/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
         android:inputType="text"/>
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
+        android:id="@+id/btSave"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="@string/bt_save" />
 </LinearLayout>
