--- a/HelloSample/app/src/main/res/layout/activity_main.xml
+++ b/HelloSample/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,23 @@
         android:layout_height="wrap_content"
         android:text="@string/tv_name"/>
 
+    <EditText
+        android:id="@+id/etName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"/>
+
+    <Button
+        android:id="@+id/btClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/bt_click"/>
+
+    <TextView
+        android:id="@+id/tvOutput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text=""
+        android:textSize="25sp"/>
 </LinearLayout>
